deployment/kubernetes-overlays/dev/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whiskc-auth-ingress
  annotations:
    cert-manager.io/issuer: letsencrypt-nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.whiskc.xyz
      secretName: letsencrypt-nginx
  rules:
    - host: api.whiskc.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whiskc-auth
                port:
                  number: 8080
